--- a/index.htm
+++ b/index.htm
@@ -180,10 +180,15 @@
                     <li>
                         <h3>部分运维项目（不详写了，写多了，说不定还被人盗走）</h3>
                         <p>
-                            部分项目代码<br>
-                            https://github.com/WZQ1397<br>
-                            项目截图<br>
-                            http://note.youdao.com/noteshare?id=651f26295d71335d1fb8605b0c7039d6
+                            部分项目代码（体现代码之美，我瞎扯）<br>
+                            <a href="https://github.com/WZQ1397" target="_blank">
+                            <img border="0" src="static/image/054cb.gif" />
+                            </a><br>
+                            项目截图与简介(看图吧，颜值还是很重要滴(*^__^*))<br>
+                            <a href="http://note.youdao.com/noteshare?id=651f26295d71335d1fb8605b0c7039d6" target="_blank">
+                            <img border="0" src="static/image/cli2.png" />
+                            </a>
+                            
                             
                         </p>
                     </li>
