--- a/index.htm
+++ b/index.htm
@@ -195,8 +195,11 @@
                     <li>
                         <h3>上海科技翻译协会项目</h3>
                         <p>
+                            http://www.tudou.com/programs/view/-O8zEXINgaI/<br/>
                             http://i.youku.com/u/UNDYwNjQ4NTUwMA==?spm=a2h0k.8191414.0.0
                             <br/>
+                            http://v.youku.com/v_show/id_XMjc3NDI0OTk2OA<br/>
+                            
                         </p>
                     </li>
                 </ul>
@@ -218,6 +221,7 @@
 2016.5 RoboCup太仓家庭医疗专项赛一等奖<br>
 2016君乐杯创业大赛一等奖<br>
 2016三创电子商务大赛三等奖<br>
+2017MPD软件工作坊<br>
 2016学年专业科技创新奖</p>  
                 
             </div>
