--- a/index.htm
+++ b/index.htm
@@ -221,8 +221,8 @@
 2016.5 RoboCup太仓家庭医疗专项赛一等奖<br>
 2016君乐杯创业大赛一等奖<br>
 2016三创电子商务大赛三等奖<br>
-2017MPD软件工作坊<br>
-2016学年专业科技创新奖</p>  
+2016学年专业科技创新奖<br>2017年MPD软件工作坊优秀奖
+</p>  
                 
             </div>
             <div class="aboutme info-unit right-paragraph">
