--- a/index.htm
+++ b/index.htm
@@ -214,14 +214,14 @@
                 <h2 class="info-header"><i class="iconfont icon-trophy"></i> <span class="info-title">校级和全国奖项</span></h2>
                 <hr><img src="static/image/power.png"  alt="power" style="float:right"/>
                 <ul class="experience-list">
-                        <p>2015学年综合二等奖学金<br>
+                        <p><b>2015学年综合二等奖学金<br>
 2016学年综合二等奖学金<br>
 2015学年专业实践操作奖<br>
 2016.4 RoboCup中国赛家庭组团体一等奖<br>
 2016.5 RoboCup太仓家庭医疗专项赛一等奖<br>
 2016君乐杯创业大赛一等奖<br>
 2016三创电子商务大赛三等奖<br>
-2016学年专业科技创新奖<br>2017年MPD软件工作坊优秀奖
+2016学年专业科技创新奖<br>2017年MPD软件工作坊优秀奖</b>
 </p>  
                 
             </div>
