--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,8 @@
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">上海杉达学院</span></li>
                     <li>
+                        <label class="left-label">专业</label><span class="label-value">计算机科学与技术</span></li>
+                    <li>
                         <label class="left-label">毕业年份</label><span class="label-value">2019</span></li>
                 </ul>
             </div>
@@ -118,7 +120,7 @@
             </div>
         </div>
         <div class="main">
-            <div class="education info-unit right-list">
+        <!--    <div class="education info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">教育经历</span></h2>
                 <hr>
                 <ul class="experience-list">
@@ -129,7 +131,7 @@
                         </p>
                     </li>
                 </ul>
-            </div>
+            </div>-->
             <div class="lang">
                 <h2 class="info-header"><i class="iconfont icon-librarybooks"></i> <span class="info-title">语言水平</span></h2>
                 <hr>
