--- a/index.htm
+++ b/index.htm
@@ -192,7 +192,7 @@
                             </a>
                             MORE ???<br><b><font color="#FF0000">部分项目简介</font></b> <br>
                             <a href="http://wzq1397.1080pdy.com/static/" target="_blank">
-                            
+                            <img border="0" src="static/image/cli2.png" />
                         </p>
                     </li>
                     <li>
