--- a/index.htm
+++ b/index.htm
@@ -190,9 +190,9 @@
                             <a href="http://note.youdao.com/noteshare?id=651f26295d71335d1fb8605b0c7039d6" target="_blank">
                             <img border="0" src="static/image/cli2.png" />
                             </a>
-                            MORE ???<br><b><font color="#FF0000">部分项目简介</font></b> <br>
+                            <br><b><font color="#FF0000">部分项目简介</font></b> <br>
                             <a href="http://wzq1397.1080pdy.com/static/" target="_blank">
-                            <img border="0" src="static/image/cli2.png" />
+                            <img border="0" src="static/image/cli2.png" /></a>
                         </p>
                     </li>
                     <li>
