--- a/static/index.html
+++ b/static/index.html
@@ -381,7 +381,7 @@ content:"...";
 			<div id="mr_mr_head">
 				<div class="m_portrait mr_top_bg">
 					<img src="http://www.lagou.com//images/myresume/tou.png" class="opa" alt="" />
-					<img src="http://www.lagou.com/images/myresume/default_headpic.png" width="120" height="120" alt="" />
+					<img src="image/head.png" width="120" height="120" alt="" />
 				</div>
 				<div class="mr_baseinfo">
 					<i class="mr_left_bg"></i>
