--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
             <div class="me">
                 <div class="portrait"></div>
                 <h1 id="username" >Zach.Wang</h1>
-                <h4 id="persona-tag" >运维开发工程师/监控管理/视频剪辑</h4>
+                <h4 id="persona-tag" >运维开发工程师/运维监控管理</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -211,7 +211,7 @@
                 <h2 class="info-header"><i class="iconfont icon-trophy1"></i> <span class="info-title">职业证书</span></h2>
                 <hr>
                 <ul class="experience-list">
-                <h3>CCNA、CCNP、全国软考中级网络工程师、JAVA高级（三级）</h3>
+                <h3>CCNA、CCNP、HCNA-cloud、HCNP-RS、全国软考中级网络工程师、JAVA高级（三级）、计算机二级C</h3>
             </div>
             <div class="trophy info-unit">
                 <h2 class="info-header"><i class="iconfont icon-trophy"></i> <span class="info-title">校级和全国奖项</span></h2>
@@ -225,7 +225,8 @@
 2016君乐杯创业大赛一等奖<br>
 2016三创电子商务大赛三等奖<br>
 2016学年专业科技创新奖<br>2017年MPD软件工作坊优秀奖<br>
-2017届校优秀毕业生<br>2017年上海科技翻译学会优秀会员</b>
+2017届校优秀毕业生<br>2017年上海科技翻译学会优秀会员<br>
+2018年华为ICT大赛上海赛区一等奖</b>
 </p>  
                 
             </div>
