--- a/static/index.html
+++ b/static/index.html
@@ -780,7 +780,7 @@ content:"...";
 <p>14.对SDN，KALI，SEO有一定了解</p>
 <p><br /></p>
 <p>职业能力认证：</p>
-<p>CCNA、CCNP、全国软考中级网络工程师、JAVA高级（三级）</p>
+<p>CCNA、CCNP、HCNA-cloud、HCNP-RS、全国软考中级网络工程师、JAVA高级（三级）、计算机二级C</p>
 <p>CET-6/日语N3</p>
 							</div>
 						</div>
