--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@
                         <label class="left-label">数据库与缓存</label><span class="label-value">MySQL/Percona/MariaDB、SQL server、RabbitMQ、Redis、memcached、influxDB</span></li>
                     </li>
                     <li>
-                        <label class="left-label">集群、云计算、容器</label><span class="label-value">HAProxy、HB、Keepalived、RHCS、DRBD、GFS/DFS、openstack、docker/docker-compose</span></li>
+                        <label class="left-label">集群、云计算、容器</label><span class="label-value">vsphere、HAProxy、HB、Keepalived、RHCS、DRBD、GFS/DFS、openstack、docker/docker-compose</span></li>
                     </li>
                 </ul>
             </div>
