--- a/index.htm
+++ b/index.htm
@@ -167,11 +167,21 @@
                         </p>
                     </li>
                     <li>
-                        <h3>上海科技翻译协会（技术支持【长期合作中】）</h3>
-                        <p>1.负责现场设备调试（场控）<br>
+                        <h3>上海通善互联网金融信息服务有限公司（运维工程师）</h3>
+                        <p>1.管理配置本地与AWS服务器、网络、RDS等约200台<br>
+2.熟练部署监控公司服务器和应用（zabbix、nagios）<br>
+3.管理部署ELK、ELB、VPN、基本集群高可用分布式、zookeeper、dubbo等<br>
+4.管理部署docker、k8s、mesos、vmware、proxmx等容器和虚拟化服务<br>
+5.管理部署Jenkins、git/gerrit、gitlab、rundeck等CI/CD<br>
+6.管理部署数据服务如：mysql、redis、rabbitmq、mongo等等<br>
+7.熟悉自动化部署和配置管理salt、ansible、disconf等<br> 
+8.熟练使用shell/python/php日常脚本开发
+                        </p>
+
+                        <!-- <p>1.负责现场设备调试（场控）<br>
                         2.负责测试现场无线网络环境<br>
                         3.视频后期制作与合成优化
-                        </p>
+                        </p> -->
                     </li>                    
                 </ul class="experience-list">
             </div>
@@ -191,7 +201,7 @@
                             <img border="0" src="static/image/cli2.png" />
                             </a>
                             <br><b><font color="#FF0000">部分项目简介</font></b> <br>
-                            <a href="http://wzq1397.1080pdy.com/static/" target="_blank">
+                            <a href="http://wzq1397.51lym.vip/static/" target="_blank">
                             <img border="0" src="static/image/cli2.png" /></a>
                         </p>
                     </li>
