--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@
                         <p>1.管理配置本地与AWS服务器、网络、RDS等约200台<br>
 2.熟练部署监控公司服务器和应用（zabbix、nagios）<br>
 3.管理部署ELK、ELB、VPN、基本集群高可用分布式、zookeeper、dubbo等<br>
-4.管理部署docker、k8s、mesos、vmware、proxmx等容器和虚拟化服务<br>
+4.管理部署docker、k8s、mesos、vmware、Proxmox等容器和虚拟化服务<br>
 5.管理部署Jenkins、git/gerrit、gitlab、rundeck等CI/CD<br>
 6.管理部署数据服务如：mysql、redis、rabbitmq、mongo等等<br>
 7.熟悉自动化部署和配置管理salt、ansible、disconf等<br> 
